Finished advertisement page for codecademy project

--- a/index.html
+++ b/index.html
@@ -5,5 +5,26 @@
         <link href="./resources/css/style.css" rel="stylesheet">
     </head>
     <body>
+        <header>
+            <h1>Discover hidden places in the world around you</h1>
+            <a href="">Download Excursion (Comming Soon!)</a>
+        </header>
+        <main>
+            <video autoplay muted loop>
+                <source src="./resources/video/excursion.mp4" type="video/mp4">
+                Video is not supported by this browser.
+            </video>
+            <p id="app-description">Your personal travel guide</p>
+            <p id="app-description-2">Excursion remembers places you like, and recommends new points of interest around you.</p>
+            <img src="./resources/imgs/camp.jpg" alt="Camp ground image">
+            <br><br>
+            <img src="./resources/imgs/phone.png" alt="Phone icon image">
+            <br><br>
+            <p id="app-description">Coming Soon for Iphone and Android</p>
+            <a href="">Download Excursion (Comming Soon!)</a>
+        </main>
+        <footer>
+            <p>&copy; Excursion</p>
+        </footer>
     </body>
 </html>
